# center

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  center.h  test.cpp
app/: CMakeLists.txt  main.cpp
cmake/: cpack.cmake
cmake/configs/: centerConfig.cmake.in
include/: CMakeLists.txt  center.h
include/center/: CMakeLists.txt  center.h
src/: CMakeLists.txt  center.cpp  center.in.rc  center.linux.cpp  center.windows.cpp  main.cpp
test/: test.cpp
tests/: CMakeLists.txt  test.cpp
