
set(
  CENTER_LIB_SOURCES
  center.cpp
  center.linux.cpp
  center.windows.cpp
)


if (WIN32)

  set(RESOURCE_PRE_CONF "${CMAKE_CURRENT_SOURCE_DIR}/center.in.rc")
  set(RESOURCE_POST_CONF "${CMAKE_BINARY_DIR}/center.rc")
  list(APPEND CENTER_LIB_SOURCES ${RESOURCE_POST_CONF})

  configure_file(
    ${RESOURCE_PRE_CONF}
    ${RESOURCE_POST_CONF}
    @ONLY
  )

endif()

add_library(
  ${CENTER_LIB_NAME}
  ${CENTER_LIB_SOURCES}
  ${CENTER_LIB_HEADERS}
)

set_target_properties(
  ${CENTER_LIB_NAME}
  PROPERTIES
    OUTPUT_NAME ${CENTER_OUTPUT_NAME}
    PUBLIC_HEADER "${CENTER_LIB_HEADERS}"
)

target_include_directories(
  ${CENTER_LIB_NAME}
  PUBLIC
    ${CENTER_LIB_INCLUDE_DIR}
)

install(TARGETS
  ${CENTER_LIB_NAME}
  LIBRARY       DESTINATION ${CMAKE_INSTALL_LIBDIR}
  PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
)
